--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1778,6 +1778,33 @@ header .mobile-menu {
 
 /* MODAL-SIGNIN */
 
+
+.form-field {
+  display: block;
+  width: 100%;
+  padding: 8px 16px;
+  line-height: 25px;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: inherit;
+  border-radius: 6px;
+  appearance: none;
+  color: var(--input-color);
+  border: 1px solid var(--input-border);
+  background: var(--input-background);
+  transition: border .3s ease;
+  &::placeholder {
+      color: var(--input-placeholder);
+  }
+  &:focus {
+      outline: none;
+      border-color: var(--input-border-focus);
+  }
+}
+
+
+
+
 .form-group {
   position: relative;
   display: flex;
