--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,24 @@ body {
   color: #fff;
 }
 
+:root {
+
+  --input-color: #99A3BA;
+  --input-border: #CDD9ED;
+  --input-background: #fff;
+  --input-placeholder: #CBD1DC;
+
+  --input-border-focus: #275EFE;
+
+  --group-color: var(--input-color);
+  --group-border: var(--input-border);
+  --group-background: #EEF4FF;
+
+  --group-color-focus: #fff;
+  --group-border-focus: var(--input-border-focus);
+  --group-background-focus: #678EFE;
+}
+
 #wrapper {
   width: 100%;
   overflow-x: auto;
