--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1869,6 +1869,60 @@ header .mobile-menu {
 }
 
 
+/* MODAL-BTN */
+
+.modal-btn {
+  position: relative;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.05em;
+  border-radius: 0.8em;
+  border: none;
+  background: linear-gradient(to right, #8e2de2, #4a00e0);
+  color: ghostwhite;
+  overflow: hidden;
+}
+
+
+.cssbuttons-io span {
+  position: relative;
+  z-index: 10;
+  transition: color 0.4s;
+  display: inline-flex;
+  align-items: center;
+  padding: 0.8em 1.2em 0.8em 1.05em;
+}
+
+.modal-btn::before,
+.modal-btn::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.modal-btn::before {
+  content: "";
+  background: #000;
+  width: 120%;
+  left: -10%;
+  transform: skew(30deg);
+  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+}
+
+.modal-btn:hover::before {
+  transform: translate3d(100%, 0, 0);
+}
+
+.modal-btn:active {
+  transform: scale(0.95);
+}
+
+
+
 /* [ RESPONSIVE ] */
 /*================================================== */
 
