--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1879,7 +1879,7 @@ header .mobile-menu {
   letter-spacing: 0.05em;
   border-radius: 0.8em;
   border: none;
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
+  background: linear-gradient(to right, #EEB609, #FCC201);
   color: ghostwhite;
   overflow: hidden;
 }
