--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1880,7 +1880,7 @@ header .mobile-menu {
   border-radius: 0.8em;
   border: none;
   background: linear-gradient(to right, #DBA514, #FCC201);
-  color: ghostwhite;
+  /* color: ghostwhite; */
   overflow: hidden;
 }
 
