--- a/public/css/style.css
+++ b/public/css/style.css
@@ -540,7 +540,8 @@ header .header-inner .mail p {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
-  margin-right: 15px;
+  padding-right: 15px;
+  border-right: solid #ccc 2px;
 }
 
 header .mobile-menu {
@@ -554,9 +555,8 @@ header .mobile-menu {
 }
 
 span.sign-out {
-  padding-left: 12px;
+  margin-left: 12px;
   font-size: 1.1rem;
-  border-left: 2px solid #ccc;
   position: relative;
 }
 
@@ -566,7 +566,7 @@ span.sign-out {
   width: 100%;
   height: 4px;
   border-radius: 4px;
-  background-color: #18272F;
+  background-color: gold;
   bottom: 0;
   left: 0;
   transform-origin: right;
