--- a/public/css/style.css
+++ b/public/css/style.css
@@ -564,7 +564,7 @@ span.sign-out {
   content: '';
   position: absolute;
   width: 100%;
-  height: 4px;
+  height: 2px;
   border-radius: 4px;
   background-color: gold;
   bottom: 0;
@@ -575,8 +575,10 @@ span.sign-out {
 }
 
 .sign-out:hover::before {
-transform-origin: left;
-transform: scaleX(1);
+  cursor: pointer;
+  transform-origin: left;
+  transform: scaleX(1);
+
 }
 
 
