--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,10 @@ body {
   --group-background-focus: gold ;
 }
 
+.white-text {
+  color: #fff;
+}
+
 #wrapper {
   width: 100%;
   overflow-x: auto;
