--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,9 @@ body {
 
   --group-color-focus: #000 ;
   --group-border-focus: var(--input-border-focus);
-  --group-background-focus: gold ;
+  --group-background-focus: #ffb400 ;
+
+  --text-color: #ffb400;
 }
 
 
@@ -1906,7 +1908,7 @@ span.sign-out {
 }
 
 .text-gold {
-  color: gold;
+  color: var(--text-color);
 }
 
 .modal-sub-title{
