--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1915,6 +1915,18 @@ span.sign-out {
   margin-bottom: 0;
 }
 
+.modal-sub-title:hover {
+  cursor: pointer;
+  font-size: 1.25rem;
+  color: var(--text-color)
+  
+}
+
+.modal-sub-title:hover .text-gold {
+  color: #000;
+  font-size: 1rem;
+}
+
 /* MODAL-BTN */
 
 .btn-primary {
