--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1915,17 +1915,13 @@ span.sign-out {
   margin-bottom: 0;
 }
 
-.modal-sub-title:hover {
+.modal-sub-title:hover .text-black {
   cursor: pointer;
   font-size: 1.25rem;
-  color: var(--text-color)
-  
+  color: var(--text-color);
+  transition: .9s;
 }
 
-.modal-sub-title:hover .text-gold {
-  color: #000;
-  font-size: 1rem;
-}
 
 /* MODAL-BTN */
 
