--- a/public/css/style.css
+++ b/public/css/style.css
@@ -561,6 +561,7 @@ span.sign-out {
   margin-left: 12px;
   font-size: 1.1rem;
   position: relative;
+  cursor: pointer;
 }
 
 .sign-out::before {
@@ -569,7 +570,7 @@ span.sign-out {
   width: 100%;
   height: 2px;
   border-radius: 4px;
-  background-color: gold;
+  background-color: var(--text-color);
   bottom: 0;
   left: 0;
   transform-origin: right;
@@ -1915,14 +1916,29 @@ span.sign-out {
   margin-bottom: 0;
   font-size: 1rem;
   color: #ccc;
-}
-.modal-sub-title:hover {
-  font-size: 1.25rem;
-  color: var(--text-color);
-  transition: 0.9s;
-  text-decoration: underline;
+  cursor: pointer;
 }
 
+.modal-sub-title::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: var(--text-color);
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.modal-sub-title:hover::before {
+  cursor: pointer;
+  transform-origin: left;
+  transform: scaleX(1);
+
+}
 
 
 /* MODAL-BTN */
