--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1917,11 +1917,14 @@ span.sign-out {
   font-size: 1rem;
   color: #ccc;
   cursor: pointer;
+  position: relative;
 }
 
 .modal-sub-title::before {
   content: '';
   position: absolute;
+  font-size: 1.25rem;
+  color: var(--text-color);
   width: 100%;
   height: 2px;
   border-radius: 4px;
