--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1950,7 +1950,7 @@ span.sign-out {
   transition: .9s;
 }
 
-.modal-sub-title:hover ~ .modal-title {
+.modal-sub-title:hover ~ .modal-main-title {
   font-size: 1rem;
   color: #ccc;
 }
