--- a/public/css/style.css
+++ b/public/css/style.css
@@ -557,14 +557,14 @@ header .mobile-menu {
   justify-content: center;
 }
 
-span.log-btn {
+#sign-in {
   margin-left: 12px;
   font-size: 1.1rem;
   position: relative;
   cursor: pointer;
 }
 
-.log-btn::before {
+#sign-in::before {
   content: '';
   position: absolute;
   width: 100%;
@@ -578,12 +578,43 @@ span.log-btn {
   transition: transform .3s ease-in-out;
 }
 
-.log-btnt:hover::before {
+.sign-in:hover::before {
   cursor: pointer;
   transform-origin: left;
   transform: scaleX(1);
 
 }
+
+
+#logout {
+  margin-left: 12px;
+  font-size: 1.1rem;
+  position: relative;
+  cursor: pointer;
+}
+
+#log-out::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: var(--text-color);
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.log-out:hover::before {
+  cursor: pointer;
+  transform-origin: left;
+  transform: scaleX(1);
+
+}
+
+
 
 
 /* [ SECTIONS ] */
