--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2013,6 +2013,13 @@ span.log-btn {
 
 
 
+/* NETWORD-SECTION */
+
+
+
+
+
+
 /* [ RESPONSIVE ] */
 /*================================================== */
 
