--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2074,7 +2074,7 @@ header .mobile-menu {
 
 .ref-items {
   font-size: 1.2rem;
-  color: var(--text-color);
+  color: var(--input-background);
   display: flex;
   align-items: center;
   justify-content: space-between;
