--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1944,6 +1944,37 @@ header .mobile-menu {
 }
 
 
+#container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 350px;
+  background: white;
+  border: 2px solid #664FC3;
+}
+
+input#container{
+  width: 290px;
+  padding: 16px;
+  border: 0px;
+  outline: 0px;
+  box-shadow: 0px;
+  font-family: inherit;
+}
+input#container:hover,
+input#container:focus{
+  border: 0px;
+  outline: 0px;
+  box-shadow: 0px;
+}
+
+.fa{
+  padding: 16px;
+  color: #664FC3;
+  font-weight: bold;
+}
+
 .modal-main-title {
   color: var(--text-color);
   margin-bottom: 0;
