--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1948,7 +1948,7 @@ header .mobile-menu {
   position: relative;
 }
 
-#label input {
+label input {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   color: #f9f9f9;
@@ -1963,11 +1963,11 @@ header .mobile-menu {
   transition: border-color 0.2s;
 }
 
-#label input:focus {
+label input:focus {
   border-color: #ff4754;
 }
 
-#label p {
+label p {
   color: #f9f9f9;
   font-size: 1rem;
   user-select: none;
@@ -1984,7 +1984,7 @@ header .mobile-menu {
   transition: top 0.2s, font-size 0.2s, color 0.2s;
 }
 
-#label .password-icon {
+label .password-icon {
   display: flex;
   align-items: center;
 
@@ -1998,23 +1998,23 @@ header .mobile-menu {
   transition: color 0.2s;
 }
 
-#label .password-icon .feather-eye-off {
+label .password-icon .feather-eye-off {
   display: none;
 }
 
-#label .password-icon:hover {
+label .password-icon:hover {
   cursor: pointer;
   color: #ff4754;
 }
 
-#label input:focus + p,
-#label input:not(:placeholder-shown) + p {
+label input:focus + p,
+label input:not(:placeholder-shown) + p {
   top: 0;
   font-size: 0.9rem;
   color: #ff4754;
 }
 
-#label input:not(:focus) + p {
+label input:not(:focus) + p {
   color: #7a7a7a56;
 }
 
